# uptiny

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.adoc
tests/: firmware_test.cc  root_signed_test.cc  root_test.cc  signatures_test.cc  targets_test.cc  test_state.cc  update_test.cc
